--- a/src/app/patients/patients.component.html
+++ b/src/app/patients/patients.component.html
@@ -4,9 +4,9 @@
 
 <div class="row">
   <div class="col-md-6">
-    <app-employee></app-employee>
+    <app-patient></app-patient>
   </div>
   <div class="col-md-6">
-    <app-employee-list></app-employee-list>
+    <app-patient-list></app-patient-list>
   </div>
 </div>
