--- a/src/app/patients/patient-list/patient-list.component.html
+++ b/src/app/patients/patient-list/patient-list.component.html
@@ -1,3 +1,17 @@
 <p>
-  patient-list works!
+  Patients List
 </p>
+
+<table class="table table-sm table-hover">
+  <tr *ngFor="let patient of patientService.patientList">
+    <td>{{patient.fisrtName}} - {{patient.lastName}}</td>
+    <td>
+      <a class="btn" (click)="showForEdit(patient)">
+        <i class="fa fa-pencil-square-o"></i>
+      </a>
+      <a class="btn text-danger" (click)="onDelete(patient.id)">
+        <i class="fa fa-trash-o"></i>
+      </a>
+    </td>
+  </tr>
+</table>
