--- a/src/app/patients/patients.component.html
+++ b/src/app/patients/patients.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-7 col-md-6 col-sm-12">
         <h2>Patients
-          <small>Welcome to Oreo</small>
+          <small>Welcome to My Clinic</small>
         </h2>
       </div>
       <div class="col-lg-5 col-md-6 col-sm-12">
