--- a/src/app/patients/patients.component.html
+++ b/src/app/patients/patients.component.html
@@ -8,7 +8,7 @@
       </div>
       <div class="col-lg-5 col-md-6 col-sm-12">
         <ul class="breadcrumb float-md-right">
-          <li class="breadcrumb-item"><a routerLink="/dashboard"><i class="zmdi zmdi-home"></i> Oreo</a></li>
+          <li class="breadcrumb-item"><a routerLink="/dashboard"><i class="zmdi zmdi-home"></i> My Clinic</a></li>
           <li class="breadcrumb-item active"><a routerLink="patients">Patients</a></li>
         </ul>
       </div>
