--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-transparent">
     <div class="container">        
         <div class="navbar-translate n_logo">
-            <a class="navbar-brand" href="javascript:void(0);" title="" target="_blank">Oreo</a>
+            <a class="navbar-brand" href="javascript:void(0);" title="" target="_blank">My Clinic</a>
             <button class="navbar-toggler" type="button">
                 <span class="navbar-toggler-bar bar1"></span>
                 <span class="navbar-toggler-bar bar2"></span>
@@ -9,31 +9,7 @@
             </button>
         </div>
         <div class="navbar-collapse">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/dashboard">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);">Search Result</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" title="Follow us on Twitter" href="javascript:void(0);" target="_blank">
-                        <i class="zmdi zmdi-twitter"></i>
-                        <p class="d-lg-none d-xl-none">Twitter</p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" title="Like us on Facebook" href="javascript:void(0);" target="_blank">
-                        <i class="zmdi zmdi-facebook"></i>
-                        <p class="d-lg-none d-xl-none">Facebook</p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" title="Follow us on Instagram" href="javascript:void(0);" target="_blank">                        
-                        <i class="zmdi zmdi-instagram"></i>
-                        <p class="d-lg-none d-xl-none">Instagram</p>
-                    </a>
-                </li>                
+            <ul class="navbar-nav">  
                 <li class="nav-item">
                     <a class="nav-link btn btn-white btn-round" routerLink="/authentication/signup">SIGN UP</a>
                 </li>
@@ -80,15 +56,15 @@
         <div class="container">
             <nav>
                 <ul>
-                    <li><a href="http://thememakker.com/contact/" target="_blank">Contact Us</a></li>
-                    <li><a href="http://thememakker.com/about/" target="_blank">About Us</a></li>
-                    <li><a href="javascript:void(0);">FAQ</a></li>
+                    <li><a href="#" target="_blank">Contact Us</a></li>
+                    <li><a href="#" target="_blank">About Us</a></li>
+                    <li><a href="#">FAQ</a></li>
                 </ul>
             </nav>
             <div class="copyright">
                 &copy;
                 {{year}},
-                <span>Designed by <a href="http://thememakker.com/" target="_blank">ThemeMakker</a></span>
+                <span>Designed by <a href="#" target="_blank">Osama Farhat</a></span>
             </div>
         </div>
     </footer>
