--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -2,14 +2,14 @@
   <div class="block-header">
     <div class="row">
       <div class="col-lg-7 col-md-6 col-sm-12">
-        <h2>Patients
-          <small>Welcome to Oreo</small>
+        <h2>Employees
+          <small>Welcome to My Clinic</small>
         </h2>
       </div>
       <div class="col-lg-5 col-md-6 col-sm-12">
         <ul class="breadcrumb float-md-right">
-          <li class="breadcrumb-item"><a routerLink="/dashboard"><i class="zmdi zmdi-home"></i> Oreo</a></li>
-          <li class="breadcrumb-item active"><a routerLink="patients">Patients</a></li>
+          <li class="breadcrumb-item"><a routerLink="/dashboard"><i class="zmdi zmdi-home"></i> My Clinic</a></li>
+          <li class="breadcrumb-item active"><a routerLink="patients">Employees</a></li>
         </ul>
       </div>
     </div>
@@ -19,7 +19,7 @@
       <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="card">
           <div class="header">
-            <h2><strong>Patients</strong> List </h2>
+            <h2><strong>Employees</strong> List </h2>
             <ul class="header-dropdown">
               <li class="remove">
                 <a role="button" class="boxs-close"><i class="zmdi zmdi-close"></i></a>
@@ -30,14 +30,13 @@
             <div class="row clearfix">
               <div class="col-md-12">
                 <p>
-                  patients works!
                 </p>
               </div>
               <div class="col-md-6">
-                <app-patient></app-patient>
+                <app-employee></app-employee>
               </div>
               <div class="col-md-6">
-                <app-patient-list></app-patient-list>
+                <app-employee-list></app-employee-list>
               </div>
             </div>
           </div>
