--- a/src/appointmentssssssssssssssssssssss/appointmentsssssssssssss.component.html
+++ b/src/appointmentssssssssssssssssssssss/appointmentsssssssssssss.component.html
@@ -3,12 +3,12 @@
       <div class="row">
           <div class="col-lg-7 col-md-6 col-sm-12">
               <h2>Book Appointment
-              <small>Welcome to Oreo</small>
+              <small>Welcome to My Clinic</small>
               </h2>
           </div>
           <div class="col-lg-5 col-md-6 col-sm-12">
               <ul class="breadcrumb float-md-right">
-                  <li class="breadcrumb-item"><a routerLink="/dashboard"><i class="zmdi zmdi-home"></i> Oreo</a></li>
+                  <li class="breadcrumb-item"><a routerLink="/dashboard"><i class="zmdi zmdi-home"></i> My Clinic</a></li>
                   <li class="breadcrumb-item"><a href="javascript:void(0);">Appointment</a></li>
                   <li class="breadcrumb-item active">Book Appointment</li>
               </ul>
