--- a/src/app/employees/employee-list/employee-list.component.html
+++ b/src/app/employees/employee-list/employee-list.component.html
@@ -1,12 +1,12 @@
 <table class="table table-sm table-hover">
   <tr *ngFor="let employee of employeeService.employeeList">
-    <td>{{employee.FirstName}} - {{employee.LastName}}</td>
-    <td>{{employee.EmpCode}}</td>
+    <td>{{employee.firstName}} - {{employee.lastName}}</td>
+    <td>{{employee.empCode}}</td>
     <td>
       <a class="btn" (click)="showForEdit(employee)">
         <i class="fa fa-pencil-square-o"></i>
       </a>
-      <a class="btn text-danger" (click)="onDelete(employee.EmployeeID)">
+      <a class="btn text-danger" (click)="onDelete(employee.employeeID)">
         <i class="fa fa-trash-o"></i>
       </a>
     </td>
