--- a/src/app/employees/employee/employee.component.html
+++ b/src/app/employees/employee/employee.component.html
@@ -1,28 +1,28 @@
 <form class="emp-form" #employeeForm="ngForm" (ngSubmit)="onSubmit(employeeForm)">
-  <input type="hidden" name="EmployeeID" #EmployeeID="ngModel" [(ngModel)]="employeeService.selectedEmployee.EmployeeID">
+  <input type="hidden" name="employeeID" #employeeID="ngModel" [(ngModel)]="employeeService.selectedEmployee.employeeID">
   <div class="form-row">
     <div class="form-group col-md-6">
-      <input class="form-control" name="FirstName" #FirstName="ngModel" [(ngModel)]="employeeService.selectedEmployee.FirstName"
+      <input class="form-control" name="firstName" #firstName="ngModel" [(ngModel)]="employeeService.selectedEmployee.firstName"
         placeholder="First Name" required>
-      <div class="validation-error" *ngIf="FirstName.invalid && FirstName.touched">This Field is Required.</div>
+      <div class="validation-error" *ngIf="firstName.invalid && firstName.touched">This Field is Required.</div>
     </div>
     <div class="form-group col-md-6">
-      <input class="form-control" name="LastName" #LastName="ngModel" [(ngModel)]="employeeService.selectedEmployee.LastName" placeholder="Last Name"
+      <input class="form-control" name="lastName" #lastName="ngModel" [(ngModel)]="employeeService.selectedEmployee.lastName" placeholder="Last Name"
         required>
-      <div class="validation-error" *ngIf="LastName.invalid && LastName.touched">This Field is Required.</div>
+      <div class="validation-error" *ngIf="lastName.invalid && lastName.touched">This Field is Required.</div>
     </div>
   </div>
   <div class="form-group">
       <div class="form-group col-md-6">
-    <input class="form-control" name="Position" #Position="ngModel" [(ngModel)]="employeeService.selectedEmployee.Position" placeholder="Position">
+    <input class="form-control" name="position" #position="ngModel" [(ngModel)]="employeeService.selectedEmployee.position" placeholder="Position">
   </div>
   </div>
   <div class="form-row">
     <div class="form-group col-md-6">
-      <input class="form-control" name="EmpCode" #EmpCode="ngModel" [(ngModel)]="employeeService.selectedEmployee.EmpCode" placeholder="Emp Code">
+      <input class="form-control" name="empCode" #empCode="ngModel" [(ngModel)]="employeeService.selectedEmployee.empCode" placeholder="Emp Code">
     </div>
     <div class="form-group col-md-6">
-      <input class="form-control" name="Office" #Office="ngModel" [(ngModel)]="employeeService.selectedEmployee.Office" placeholder="Office">
+      <input class="form-control" name="office" #office="ngModel" [(ngModel)]="employeeService.selectedEmployee.office" placeholder="Office">
     </div>
   </div>
   <div class="form-row">
