--- a/src/app/patients/patient-list/patient-list.component.html
+++ b/src/app/patients/patient-list/patient-list.component.html
@@ -1,7 +1,7 @@
 <table class="table table-sm table-hover">
   <tr *ngFor="let patient of patientService.patientList">
-    <td>{{patient.FisrtName}} - {{patient.LastName}}</td>
-    <td>{{patient.Mobile}}</td>
+    <td>{{patient.firstName}} - {{patient.lastName}}</td>
+    <td>{{patient.mobile}}</td>
     <td>
        <!-- <a class="btn" (click)="showForEdit(patient)">-->
       <a (click)="showForEdit(patient)">
@@ -9,7 +9,7 @@
 		<i class="material-icons">edit</i>
       </a>
       <!--<a class="btn text-danger" (click)="onDelete(patient.Id)">-->
-          <a (click)="onDelete(patient.Id)">
+          <a (click)="onDelete(patient.id)">
         <!--<i class="fa fa-trash-o"></i>-->
 		<i class="material-icons">delete</i>
       </a>
